// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CandlestickChart > handles all bearish candles 1`] = `
" [38;2;85;85;85m₹121.00[0m [38;2;255;68;68m█[0m                   
         [38;2;255;68;68m█[0m    [38;2;255;68;68m█[0m              
 [38;2;85;85;85m₹110.00[0m [38;2;85;85;85m│[0m    [38;2;255;68;68m█[0m    [38;2;85;85;85m│[0m         
              [38;2;255;68;68m█[0m    [38;2;255;68;68m█[0m    [38;2;85;85;85m│[0m    
                   [38;2;255;68;68m█[0m    [38;2;255;68;68m█[0m    
  [38;2;85;85;85m₹99.00[0m                [38;2;255;68;68m█[0m    "
`;

exports[`CandlestickChart > handles all bullish candles 1`] = `
" [38;2;85;85;85m₹121.00[0m                [38;2;0;255;136m░[0m    
                   [38;2;0;255;136m░[0m    [38;2;0;255;136m░[0m    
 [38;2;85;85;85m₹110.00[0m      [38;2;85;85;85m│[0m    [38;2;0;255;136m░[0m    [38;2;85;85;85m│[0m    
         [38;2;85;85;85m│[0m    [38;2;0;255;136m░[0m    [38;2;0;255;136m░[0m         
         [38;2;0;255;136m░[0m    [38;2;0;255;136m░[0m              
  [38;2;85;85;85m₹99.00[0m [38;2;0;255;136m░[0m                   "
`;

exports[`CandlestickChart > handles doji (open == close) 1`] = `
" [38;2;85;85;85m₹108.00[0m [38;2;85;85;85m│[0m         
         [38;2;85;85;85m│[0m    [38;2;85;85;85m│[0m    
 [38;2;85;85;85m₹100.00[0m [38;2;85;85;85m│[0m    [38;2;85;85;85m│[0m    
         [38;2;0;255;136m░[0m    [38;2;0;255;136m░[0m    
         [38;2;85;85;85m│[0m    [38;2;85;85;85m│[0m    
  [38;2;85;85;85m₹92.00[0m [38;2;85;85;85m│[0m         "
`;

exports[`CandlestickChart > handles flat price (no range) 1`] = `
" [38;2;85;85;85m₹100.00[0m          
 [38;2;85;85;85m₹100.00[0m          
                  
 [38;2;85;85;85m₹100.00[0m [38;2;0;255;136m░[0m  [38;2;0;255;136m░[0m  [38;2;0;255;136m░[0m  "
`;

exports[`CandlestickChart > renders basic chart 1`] = `
" [38;2;85;85;85m₹118.00[0m                      [38;2;85;85;85m│[0m  
                  [38;2;85;85;85m│[0m           [38;2;0;255;136m░[0m  
               [38;2;85;85;85m│[0m  [38;2;85;85;85m│[0m  [38;2;85;85;85m│[0m     [38;2;0;255;136m░[0m  [38;2;0;255;136m░[0m  
 [38;2;85;85;85m₹108.00[0m       [38;2;0;255;136m░[0m  [38;2;255;68;68m█[0m  [38;2;85;85;85m│[0m  [38;2;85;85;85m│[0m  [38;2;0;255;136m░[0m  [38;2;85;85;85m│[0m  
            [38;2;0;255;136m░[0m  [38;2;0;255;136m░[0m  [38;2;255;68;68m█[0m  [38;2;255;68;68m█[0m  [38;2;0;255;136m░[0m  [38;2;0;255;136m░[0m     
         [38;2;0;255;136m░[0m  [38;2;0;255;136m░[0m  [38;2;85;85;85m│[0m     [38;2;255;68;68m█[0m  [38;2;0;255;136m░[0m  [38;2;85;85;85m│[0m     
         [38;2;0;255;136m░[0m  [38;2;85;85;85m│[0m           [38;2;85;85;85m│[0m        
  [38;2;85;85;85m₹98.00[0m [38;2;85;85;85m│[0m                       "
`;

exports[`CandlestickChart > renders in bloomberg theme 1`] = `
" [38;2;85;85;85m₹118.00[0m               [38;2;0;200;83m░[0m 
               [38;2;85;85;85m│[0m     [38;2;85;85;85m│[0m [38;2;0;200;83m░[0m 
 [38;2;85;85;85m₹108.00[0m     [38;2;0;200;83m░[0m [38;2;255;23;68m█[0m [38;2;85;85;85m│[0m [38;2;85;85;85m│[0m [38;2;0;200;83m░[0m [38;2;0;200;83m░[0m 
         [38;2;85;85;85m│[0m [38;2;0;200;83m░[0m [38;2;0;200;83m░[0m [38;2;255;23;68m█[0m [38;2;255;23;68m█[0m [38;2;0;200;83m░[0m [38;2;0;200;83m░[0m   
         [38;2;0;200;83m░[0m [38;2;0;200;83m░[0m [38;2;85;85;85m│[0m   [38;2;85;85;85m│[0m [38;2;85;85;85m│[0m [38;2;85;85;85m│[0m   
  [38;2;85;85;85m₹98.00[0m [38;2;0;200;83m░[0m               "
`;

exports[`CandlestickChart > renders in dracula theme 1`] = `
" [38;2;98;114;164m₹118.00[0m               [38;2;80;250;123m░[0m 
               [38;2;98;114;164m│[0m     [38;2;98;114;164m│[0m [38;2;80;250;123m░[0m 
 [38;2;98;114;164m₹108.00[0m     [38;2;80;250;123m░[0m [38;2;255;85;85m█[0m [38;2;98;114;164m│[0m [38;2;98;114;164m│[0m [38;2;80;250;123m░[0m [38;2;80;250;123m░[0m 
         [38;2;98;114;164m│[0m [38;2;80;250;123m░[0m [38;2;80;250;123m░[0m [38;2;255;85;85m█[0m [38;2;255;85;85m█[0m [38;2;80;250;123m░[0m [38;2;80;250;123m░[0m   
         [38;2;80;250;123m░[0m [38;2;80;250;123m░[0m [38;2;98;114;164m│[0m   [38;2;98;114;164m│[0m [38;2;98;114;164m│[0m [38;2;98;114;164m│[0m   
  [38;2;98;114;164m₹98.00[0m [38;2;80;250;123m░[0m               "
`;

exports[`CandlestickChart > renders in monochrome theme 1`] = `
" [38;2;68;68;68m₹118.00[0m               [38;2;204;204;204m░[0m 
               [38;2;68;68;68m│[0m     [38;2;68;68;68m│[0m [38;2;204;204;204m░[0m 
 [38;2;68;68;68m₹108.00[0m     [38;2;204;204;204m░[0m [38;2;136;136;136m█[0m [38;2;68;68;68m│[0m [38;2;68;68;68m│[0m [38;2;204;204;204m░[0m [38;2;204;204;204m░[0m 
         [38;2;68;68;68m│[0m [38;2;204;204;204m░[0m [38;2;204;204;204m░[0m [38;2;136;136;136m█[0m [38;2;136;136;136m█[0m [38;2;204;204;204m░[0m [38;2;204;204;204m░[0m   
         [38;2;204;204;204m░[0m [38;2;204;204;204m░[0m [38;2;68;68;68m│[0m   [38;2;68;68;68m│[0m [38;2;68;68;68m│[0m [38;2;68;68;68m│[0m   
  [38;2;68;68;68m₹98.00[0m [38;2;204;204;204m░[0m               "
`;

exports[`CandlestickChart > renders with default options 1`] = `
" [38;2;85;85;85m₹118.00[0m                                           [38;2;85;85;85m│[0m     
                           [38;2;85;85;85m│[0m                       [38;2;0;255;136m░[0m     
                           [38;2;85;85;85m│[0m                 [38;2;85;85;85m│[0m     [38;2;0;255;136m░[0m     
                     [38;2;85;85;85m│[0m     [38;2;85;85;85m│[0m     [38;2;85;85;85m│[0m           [38;2;0;255;136m░[0m     [38;2;0;255;136m░[0m     
 [38;2;85;85;85m₹108.00[0m             [38;2;0;255;136m░[0m     [38;2;255;68;68m█[0m     [38;2;85;85;85m│[0m     [38;2;85;85;85m│[0m     [38;2;0;255;136m░[0m     [38;2;85;85;85m│[0m     
               [38;2;0;255;136m░[0m     [38;2;0;255;136m░[0m     [38;2;255;68;68m█[0m     [38;2;255;68;68m█[0m     [38;2;0;255;136m░[0m     [38;2;0;255;136m░[0m           
         [38;2;85;85;85m│[0m     [38;2;0;255;136m░[0m     [38;2;85;85;85m│[0m           [38;2;255;68;68m█[0m     [38;2;0;255;136m░[0m     [38;2;85;85;85m│[0m           
         [38;2;0;255;136m░[0m     [38;2;0;255;136m░[0m                 [38;2;85;85;85m│[0m     [38;2;85;85;85m│[0m                 
         [38;2;0;255;136m░[0m     [38;2;85;85;85m│[0m                                         
  [38;2;85;85;85m₹98.00[0m [38;2;85;85;85m│[0m                                               "
`;

exports[`CandlestickChart > renders with label 1`] = `
" [38;2;85;85;85m₹118.00[0m                      [38;2;0;255;136m░[0m  
                  [38;2;85;85;85m│[0m        [38;2;85;85;85m│[0m  [38;2;0;255;136m░[0m  
 [38;2;85;85;85m₹108.00[0m       [38;2;0;255;136m░[0m  [38;2;255;68;68m█[0m  [38;2;85;85;85m│[0m  [38;2;85;85;85m│[0m  [38;2;0;255;136m░[0m  [38;2;0;255;136m░[0m  
         [38;2;85;85;85m│[0m  [38;2;0;255;136m░[0m  [38;2;0;255;136m░[0m  [38;2;255;68;68m█[0m  [38;2;255;68;68m█[0m  [38;2;0;255;136m░[0m  [38;2;0;255;136m░[0m     
         [38;2;0;255;136m░[0m  [38;2;0;255;136m░[0m  [38;2;85;85;85m│[0m     [38;2;85;85;85m│[0m  [38;2;85;85;85m│[0m  [38;2;85;85;85m│[0m     
  [38;2;85;85;85m₹98.00[0m [38;2;0;255;136m░[0m                       
         [38;2;0;212;255m1D OHLCV[0m"
`;

exports[`CandlestickChart > renders without axis 1`] = `
"                     [38;2;0;255;136m░[0m  
         [38;2;85;85;85m│[0m        [38;2;85;85;85m│[0m  [38;2;0;255;136m░[0m  
      [38;2;0;255;136m░[0m  [38;2;255;68;68m█[0m  [38;2;85;85;85m│[0m  [38;2;85;85;85m│[0m  [38;2;0;255;136m░[0m  [38;2;0;255;136m░[0m  
[38;2;85;85;85m│[0m  [38;2;0;255;136m░[0m  [38;2;0;255;136m░[0m  [38;2;255;68;68m█[0m  [38;2;255;68;68m█[0m  [38;2;0;255;136m░[0m  [38;2;0;255;136m░[0m     
[38;2;0;255;136m░[0m  [38;2;0;255;136m░[0m  [38;2;85;85;85m│[0m     [38;2;85;85;85m│[0m  [38;2;85;85;85m│[0m  [38;2;85;85;85m│[0m     
[38;2;0;255;136m░[0m                       "
`;
